--- a/test/test.html
+++ b/test/test.html
@@ -9,10 +9,14 @@
     var ws = new WebSocket('ws://127.0.0.1:3653')
 
     ws.onopen = function() {
-        // 发送 Hello 消息
-        ws.send(JSON.stringify({Hello: {
-                Name: 'leaf'
-            }}))
+        // 发送 Hello 消
+
+            ws.send(JSON.stringify({Hello: {
+                    LoginName: 'leaf1111',
+                    LoginPW: 'pass'
+                }}))
+
+
     }
 </script>
 </body>
